fix whitespace issue in social icons

--- a/src/components/social-icons/social-icons.scss
+++ b/src/components/social-icons/social-icons.scss
@@ -1,9 +1,11 @@
 .social-icons {
+  display: flex;
+
   &__link:hover {
     text-decoration: none;
   }
 
   &__link + &__link {
-    margin-left: 19px;
+    margin-left: 22px;
   }
 }
